<resources>
    <string name="app_name">Technology Advances</string>
    <string name="judulapp">Technology Advances</string>
    <string name="ojolmenu">Penjelasan Ojek Online</string>
    <string name="menuutama">Menu Utama</string>
    <string name="ecom">E - Commerce</string>
    <string name="ojol">Ojek Online</string>
    <string name="mitra">Menjadi Mitra</string>
    <string name="tentang">Tentang Aplikasi</string>
    <string name="menuecom">Penjelasan E - Commerce</string>
    <string name="menumitra">Cara Menjadi Mitra</string>
    <string name="gojek">Gojek</string>
    <string name="sejarah_gojek">"Gojek (ditulis bergaya sebagai goȷek, sebelumnya ditulis GO-JEK) merupakan sebuah perusahaan teknologi asal Indonesia yang melayani angkutan melalui jasa ojek. Perusahaan ini didirikan pada tahun 2010 di Jakarta oleh Nadiem Makarim. Saat ini, Gojek telah tersedia di 50 kota di Indonesia. Hingga bulan Juni 2016, aplikasi Gojek sudah diunduh sebanyak hampir 10 juta kali di Google Play pada sistem operasi Android, dan telah tersedia di App Store. Gojek juga mempunyai layanan pembayaran digital yang bernama Gopay. Selain di Indonesia, layanan Gojek kini telah tersedia di Thailand, Vietnam dan Singapura. \n
        \nKelebihan Gojek antara lain:
        \n1. Tidak perlu sibuk mencari driver ojek.(cukup dari aplikasi)
        \n2. Harga langsung ditetapkan dari aplikasi( jadi driver tidak bisa bermain curang)
        \n3. Keamanan terjamin
        \n4. Bisa cancel orderan .
        \n5. Jalan bisa sesuai petunjuk yang sudah diarahkan.
        \nKekurangan Gojek antara lain:
        \n1. Tidak bisa pilah pilih driver yang sesuai keinginan.
        \n2. Jika ternyata merubah arah maka bersedia untuk dikenakan bayaran yang lebih.
        \n3. Pemesanan harus menggunakan internet dan smartphone
        \n4. Terkadang sering Miss komunikasi antara penumpang dan driver.
        \n5. Aplikasi sering eror"</string>
    <string name="grab">Grab</string>
    <string name="sejarah_grab">"Grab adalah Perusahaan teknologi asal Malaysia yang berkantor di Singapura yang menyediakan aplikasi layanan transportasi angkutan umum meliputi kendaraan bermotor roda 2 maupun roda 4. Perusahaan Grab hanya perusahaan teknologi yang meluncurkan Aplikasi saja dan untuk kendaraannya sendiri adalah kendaraan milik mitra yang sudah bergabung di PT Grab Indonesia.
        \nKelebihan Grab antara lain:
        \n1. Sering ada promo dan potongan nya lumayan besar
        \n2. Dapat pergi kedua tempat sekaligus dalam satu kali orderan
        \n3. Mencantumkan merk motor dari orderan yang dipesan
        \nKekurangan Grab antara lain:
        \n1. Tidak bisa menggabungkan pembayaran tunai dan non tunai
        \n2. Tidak bisa melakukan order lebih dari satu kali dalam waktu yang bersamaan
        \n3. Tidak bisa berpindah pindah akun lebih dari 3 kali ke ponsel lain"
    </string>
    <string name="shopee">Shopee</string>
    <string name="sejarah_shopee">"Shopee adalah sebuah aplikasi yang bergerak dibidang jual beli secara online dan dapat diakses secara mudah dengan menggunakan smartphone. Shopee hadir dalam bentuk aplikasi yang memudahkan penggunanya dalam melakukan kegiatan berbelanja secara online tanpa harus ribet menggunakan perangkat komputer. Shopee didirikan pertama kali di bawah naungan SEA Group Singapura pada tahun 2009 oleh Forrest Li. Kemudian aplikasi Shopee diluncurkan di Singapura pada tahun 2015, kemudian memperluas jangkauannya ke berbagai negara tetangga seperti Malaysia, Thailand, Taiwan, Vietnam, Filipina, dan termasuk Indonesia. Di Indonesia, apk Shopee Indonesia berada dibawah naungan PT Internasional Shopee Indonesia yang mulai eksis sejak tahun 2015.
        \n\nBerikut beberapa fitur yang telah disediakan oleh Shopee:
        \n1. Gratis Ongkir
        \nFitur yang paling menarik perhatian pengguna internet di Indonesia yang doyan berbelanja adalah fitur gratis ongkir. Melalui fitur ini, pembeli bisa mendapatkan barang tanpa perlu membayar ongkos kirim. Fitur ini sangat memudahkan penjual dan pembeli di Shopee sehingga mampu meningkatkan transaksi setiap harinya. Untuk bisa menjual produk dengan gratis ongkir, penjual perlu mendaftarkan tokonya dengan fitur gratis ongkir terlebih dahulu di Shopee dengan cara mudah. Umumnya, diperlukan waktu beberapa hari saja untuk pendaftaran dan verifikasi, kemudian jika telah disetujui akan muncul tulisan gratis ongkir di postingan produk. Produk yang dilengkapi dengan fitur gratis ongkir akan lebih menarik perhatian konsumen.
        \n2. COD (Cash On Delivery)
        \nFitur Shopee Indonesia yang tak kalah menarik adalah fitur COD atau Cash on Delivery. Fitur ini memungkinkan pembeli untuk melakukan pembayaran produk ketika barang sudah tiba di rumah. Untuk mengaktifkan fitur tersebut, pilih jasa pengiriman JnT pada saat checkout.
        \n3. Voucher dan Cashback
        \nShopee juga memiliki fitur voucher dan cashback berupa potongan pada saat pembelian. Voucher dan cashback tersebut diberikan dalam bentuk Shopee Pay atau Shopee Koin yang keduanya dapat digunakan untuk memotong pembayaran atau belanja selanjutnya. Untuk bisa memanfaatkan fitur ini, kamu perlu melakukan klaim pada saat penawaran atau memasukkan kode voucher pada saat checkout belanjaan.
        \n4. Shopee Pay dan Shopee Coins
        \nFitur lain yang dimiliki Shopee Indonesia adalah ShopeePay dan Shopee Koin. ShopeePay merupakan uang atau dompet elektronik yang digunakan untuk berbelanja di Shopee. Prinsip Shopee Pay sama dengan rekening bank, yaitu uang di dalamnya dapat digunakan untuk melakukan transaksi, bahkan bisa dikirim dari dan ke rekening. Umumnya, toko online yang ada di Shopee akan memberikan diskon khusus jika kamu membayar menggunakan Shopee Pay. Sedangkan Shopee Koin digunakan untuk menampung cashback dan reward potongan belanja.
        \n5. Shopee Game
        \nTak kalah menarik, kamu juga bisa memanfaatkan fitur game di Shopee untuk menghilangkan penat. Terdapat game seperti Goyang Shopee, Goyang Jari, Shopee Poli, Shopee Tanam, Shopee Potong, Shopee, Shopee Candy, Shopee Lempar, serta Shopee Candy dan Shopee Link. Semua permainan tersebut memberikan reward dan hadiah yang menarik, mulai dari koin, voucher, hingga smartphone."
    </string>
    <string name="toped">Tokopedia</string>
    <string name="sejarah_toped">"Tokopedia merupakan pasar atau mall online terbesar di Indonesia yang memungkinkan individu maupun pemilik usaha di Indonesia untuk membuka dan mengelola toko online mereka secara mudah dan gratis, sekaligus memberikan pengalaman berbelanja online yang lebih aman dan nyaman. Tokopedia sendiri menjelaskan di situs mereka bahwa keuntungan bagi pembeli dengan pembayaran UNIK adalah proses verifikasi pembayaran yang instan, yang memungkinkan penjual lebih cepat menerima order dan barang yang dijual bisa lebih cepat sampai ke pembeli. Sedangkan untuk penjual, keuntungan yang ditawarkan adalah perluasan pasar pada para pengguna UNIK yang ingin membeli di berbagai merchant Tokopedia. Pilihan pembayaran baru selain yang sudah ada ini akan memberikan transaksi online yang lebih cepat dan mudah.
        \n\nBerikut beberapa fitur yang telah disediakan oleh Tokopedia:
        \n1. Gold Merchant
        \nBanyak sekali fitur-fitur unggulan yang terdapat di dalamnya dan pastinya akan menguntungkanmu. Gold Badge yang muncul di halaman toko dan produk yang akan menarik perhatian calon pembeli, TopAds yang pastinya akan sangat membantu kamu untuk promosi, Statistik Toko untuk memantau performa tokomu, 1 Slot Admin Toko Gratis yang bisa kamu gunakan untuk menambah admin toko. Semua itu bisa langsung kamu rasakan dengan berlangganan Gold Merchant.
        \n2. Free Returns
        \nFitur ini memungkinkan pembeli untuk meretur produk secara gratis jika tidak sesuai atau tidak cocok dengan catatan produk masih dalam kondisi layak dijual. Dengan memfasilitasi produkmu menggunakan Free Returns ini, tentunya tokomu akan lebih terlihat terpercaya di mata calon pembeli. Untuk penjual yang ingin menggunakan fitur ini, kamu tidak akan dikenakan biaya sama sekali sampai waktu yang ditentukan.
        \n3. Stock Management
        \nFitur ini akan memudahkanmu melihat sisa produk yang ada di toko, sehingga kamu tidak perlu lagi repot menghitung sisa produk setiap kali ada pesanan masuk. Dan yang paling penting, fitur ini bisa meminimalisir cancellation rate di tokomu karena stok produk yang habis akan otomatis masuk ke Stok Kosong, sehingga tidak dapat dipesan pembeli.
        \n4. Mitra Toppers
        \nMitra Toppers adalah program kerjasama Tokopedia dengan mitra penyedia pinjaman yang memudahkan kamu untuk mendapatkan pinjaman modal usaha. Tokopedia bekerja sama dengan beberapa mitra penyedia pinjaman yang bisa kamu pilih seperti : BRI, UOB, Amar Bank, DBS, Bank Sampoerna, Taralite, hingga Modalku. Modal yang kamu dapatkan bisa untuk memenuhi berbagai kebutuhan bisnis onlinemu, mulai dari menambah stok dan varian produk, menambah tenaga pekerjaan, sampai mendaftarkan merek dagang.
        \n5. Pre - Order
        \nDengan menggunakan fitur Pre Order, kamu bisa mendapatkan waktu tambahan untuk memproses pesanan sampai 30 hari. Fitur ini juga bisa kamu manfaatkan jika menerima pesanan dalam jumlah banyak. Jadi jika stok pesanan tidak mencukupi, produk tidak perlu digudangkan, kamu hanya cukup mengubahnya menjadi produk Pre Order. Dengan begitu, produk tersebut tetap bisa dilihat dan dibeli namun dengan waktu proses yang lebih lama."
    </string>
    <string name="mitra_gojek">"Untuk mendaftar menjadi Driver Gojek, ada sejumlah persyaratan yang juga perlu Anda persiapkan.
        \nAdapun syarat – syaratnya, sebagai berikut:
        \n1.	WNI (Warga negara Indonesia)
        \n2.	Usia maksimal 65 tahun
        \n3.	Menyiapkan KTP Asli
        \n4.	SIM C/D Asli
        \n5.	STNK Asli
        \n6.	SKCK Asli/Legalisir
        \n7.	Buku rekening tabungan
        \n8.	Batas usia kendaraan maksimal 8 tahun (terhitung dari tahun pendaftaran)
        \n9.	Kapasitas mesin maksimal 250 cc
        \n10.	Kendaraan 4 Tak
        \n11.	Bukan kendaraan motor Trail
        \n\nUntuk jadi mitra Gojek, ada beberapa cara yang perlu kamu perhatikan agar pendaftaran berjalan lancaran. Adapun caranya yaitu sebagai berikut:
        \n1. Unduh aplikasi GoPartner melalui PlayStore atau AppStore.
        \n2. Buka aplikasi GoPartner, kemudian pilih 'Daftar Jadi Mitra'.
        \n3. Masukan nomer ponsel Anda, tunggu hingga menerima kode OTP yang dikirim melalui SMS.
        \n4. Setelah menerima kode OTP, masukan kode tersebut di kolom yang tersedia.
        \n5. Lalu, pilih Motor/Mobil driver.
        \n6. Berikutnya, mengisi identitas diri lengkap dengan dokumen yang dibutuhkan.
        \n7. Tunggu hingga data yang kamu kirim  diverifikasi.
        \n8. Jika sudah diverifikasi, maka kamu sudah jadi mitra Gojek."
    </string>
</resources>