<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/kuning"
    tools:context=".MenuUtama">

    <!--PARENT LAYOUT-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:textColor="@color/hitam"
            android:textStyle="bold"
            android:textSize="40sp"
            android:layout_gravity="center"
            android:fontFamily="@font/simplyround"
            android:text="@string/menuutama"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <!--Button Layout-->
        <ImageButton
            android:background="@null"
            android:src="@drawable/ojek"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:id="@+id/ojol_btn"
            android:layout_width="275dp"
            android:layout_height="275dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ojol"
            android:textColor="@color/hitam"
            android:layout_marginTop="8dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/monseratmed"
            android:layout_gravity="center"/>
        <ImageButton
            android:background="@null"
            android:src="@drawable/ecom"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:id="@+id/ecom_btn"
            android:layout_width="275dp"
            android:layout_height="275dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ecom"
            android:textColor="@color/hitam"
            android:layout_marginTop="8dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/monseratmed"
            android:layout_gravity="center"/>
        <ImageButton
            android:background="@null"
            android:src="@drawable/mitra"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:id="@+id/mitra_btn"
            android:layout_width="275dp"
            android:layout_height="275dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mitra"
            android:textColor="@color/hitam"
            android:layout_marginTop="8dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/monseratmed"
            android:layout_gravity="center"/>
        <ImageButton
            android:background="@null"
            android:src="@drawable/tentang"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:id="@+id/tentang_btn"
            android:layout_width="275dp"
            android:layout_height="275dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tentang"
            android:textColor="@color/hitam"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/monseratmed"
            android:layout_gravity="center"/>
    </LinearLayout>

</ScrollView>